[ignore] close xquery file after read
svn path=/trunk/eXist/; revision=11308